[project]
name = "agent-human-in-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.4.12",
    "neo4j>=6.1.0",
]
